--- a/k8s/broker-demo.yaml
+++ b/k8s/broker-demo.yaml
@@ -19,7 +19,12 @@ spec:
       containers:
       - image: cfcommunity/worlds-simplest-service-broker
         name: broker
-        resources: {}
+        env:
+        - name: SERVICE_NAME
+          value: demo
+        - name: CREDENTIALS
+          value: |-
+              {"port":40000}
 ---
 apiVersion: v1
 kind: Service
