support FAKE_STATEFUL in Helm chart as serviceBroker.fakeStateful; bump Helm v0.2.0

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -34,6 +34,8 @@ spec:
             value: "{{ .Values.serviceBroker.plan }}"
           - name: FAKE_ASYNC
             value: "{{ .Values.serviceBroker.fakeAsync }}"
+          - name: FAKE_STATEFUL
+            value: "{{ .Values.serviceBroker.fakeStateful }}"
           - name: CREDENTIALS
             value: |-
                 {{ .Values.serviceBroker.credentials }}
