--- a/ci/settings.yml
+++ b/ci/settings.yml
@@ -1,9 +1,11 @@
 ---
 meta:
   name:    worlds-simplest-service-broker
-  target:  ohio-cf
+  target:  ohio-sw
   url:     https://ci2.starkandwayne.com
-  team:    cfcommunity
+  team:    starkandwayne
+
+  initial_version: 1.3.0
 
   git:
     email:  ((git-commit-email))
