--- a/helm/worlds-simplest-service-broker/templates/deployment.yaml
+++ b/helm/worlds-simplest-service-broker/templates/deployment.yaml
@@ -8,6 +8,10 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
+  {{- with .Values.securityContext }}
+  securityContext:
+{{ toYaml . | indent 8 }}
+  {{- end }}
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
