--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -59,6 +59,7 @@ groups:
   - name: (( grab meta.name ))
     jobs:
       - latest-image
+      - pre
       - rc
       - shipit
   - name: versioning
@@ -169,6 +170,56 @@ jobs:
           icon_url: (( grab meta.slack.icon ))
           text:    '(( concat meta.slack.fail_url " " meta.pipeline ": shipit job failed" ))'
 
+
+  - name: pre
+    public: true
+    serial: true
+    plan:
+    - do:
+      - get: git
+        passed: [latest-image]
+        trigger: true
+      - get: version
+        trigger: true
+      - task: release-notes
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source:
+              repository: (( grab meta.image.name ))
+              tag:        (( grab meta.image.tag ))
+          run:
+            path: sh
+            args:
+            - -ce
+            - |
+              cd git
+              if [ -f ci/release_notes.md ]; then
+                echo "######   RELEASE NOTES   ###############"
+                echo
+                cat ci/release_notes.md
+                echo
+                echo "########################################"
+                echo
+              else
+                echo "NO RELEASE NOTES HAVE BEEN WRITTEN"
+                echo "You *might* want to do that before"
+                echo "hitting (+) on that shipit job..."
+                echo
+              fi
+          inputs:
+          - name: git
+      on_failure:
+        put: notify
+        params:
+          channel:  (( grab meta.slack.channel ))
+          username: (( grab meta.slack.username ))
+          icon_url: (( grab meta.slack.icon ))
+          link: https://pipes.starkandwayne.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+          message: release candidate job 'pre' failed (which is unusual).
+          ok: false
+
   - name: rc
     public: true
     serial: true
@@ -176,8 +227,8 @@ jobs:
     - do:
       - aggregate:
           # - { get: git,     trigger: true }
-          - { get: git,     trigger: true, passed: [latest-image] }
-          - { get: version, trigger: true, params: {pre: rc} }
+          - { get: git,     trigger: true, passed: [pre] }
+          - { get: version, trigger: false, params: {pre: rc} }
       - task: release-notes
         config:
           platform: linux
