--- a/helm/worlds-simplest-service-broker/Chart.yaml
+++ b/helm/worlds-simplest-service-broker/Chart.yaml
@@ -2,3 +2,4 @@ apiVersion: v1
 description: World's Simplest Service Broker for Service Catlog
 name: worlds-simplest-service-broker
 version: 1.3.1
+icon: https://github.com/cloudfoundry-community/worlds-simplest-service-broker/raw/master/helm/worlds-simplest-service-broker/starkandwayne-logo-blue.png
