--- a/ci/settings.yml
+++ b/ci/settings.yml
@@ -16,7 +16,11 @@ meta:
     region_name: us-east-1
     access_key:  ((aws-access-key))
     secret_key:  ((aws-secret-key))
-    charts_uri:  s3://helm.starkandwayne.com/charts
+    charts_uri:  https://chartmuseum.starkandwayne.com
+
+  chartmuseum:
+    user: ((chartmuseum-user))
+    pass: ((chartmuseum-pass))
 
   github:
     owner:  cloudfoundry-community
