fixes to shipit for concourse-pack-resource

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -100,13 +100,13 @@ jobs:
     - do:
       - { get: version, passed: [rc], params: {bump: final} }
       - { get: git,     passed: [rc] }
-      - { get: image-latest, passed: [latest-image], params: { save: true } }
+      - { get: image-latest, passed: [latest-image] }
       - aggregate:
-        - name: docker-push-tag
-          put: image-latest # as 'vX.Y.Z'
+        - put: image-latest # as 'vX.Y.Z'
           params:
             tag:        version/number
-            load:       image-latest
+            build:   git
+            builder: (( grab meta.pack.builder ))
         - name: package-chart
           task: package-chart
           config:
