--- a/helm/worlds-simplest-service-broker/Chart.yaml
+++ b/helm/worlds-simplest-service-broker/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-description: World's Simplest Service Broker for Service Catlog
+description: World's Simplest Service Broker for Service Catalog
 name: worlds-simplest-service-broker
 version: 1.3.2
 icon: https://github.com/cloudfoundry-community/worlds-simplest-service-broker/raw/master/helm/worlds-simplest-service-broker/starkandwayne-logo-blue.png
